// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basicinfo tests Basicinfo renders correctly 1`] = `
<TouchableText
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  forwardedRef={null}
>
  Error! 
   
</TouchableText>
`;

exports[`basicinfo tests Basicinfo renders correctly with error 1`] = `
<TouchableText
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  forwardedRef={null}
>
  Error! 
  Stock metadata not found 
   
</TouchableText>
`;

exports[`basicinfo tests Basicinfo renders correctly with stock 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
